--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8" />
-  <title>Gabriel V Agoncillo | Software Developer</title>
-  <link rel="shortcut icon" href="%PUBLIC_URL%/avatar-white.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Gabriel V Agoncillo | Software Developer</title>
+    <meta name="description" content="Software Developer/Engineer open for new career opportunities " />
+    <meta name=”robots” content=”index">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/avatar-white.png" />
+  </head>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-
-</head>
-
-<body id="page-top">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body id="page-top">
+    <div id="root"></div>
+  </body>
 </html>
