Added 123 in the title

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Gabriel V | Software Developer</title>
+    <title>Gabriel V Agoncillo 123 | Software Developer</title>
     <meta name="description" content="Software Developer/Engineer open for new career opportunities " />
     <meta name=”robots” content=”index">
     <link rel="shortcut icon" href="%PUBLIC_URL%/avatar-white.png" />
