Fix the double quotes in the meta tag of robots

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <title>Gabriel V. Agoncillo | Software Developer</title>
     <meta name="description" content="Software Developer/Engineer open for new career opportunities " />
-    <meta name=”robots” content=”index">
+    <meta name="robots" content="index" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/avatar-white.png" />
   </head>
 
