--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Gabriel V. Agoncillo | Software Developer</title>
     <meta name="description" content="Software Developer/Engineer open for new career opportunities " />
     <meta name="robots" content="index" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/avatar-white.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/avatar-wo-bg.png" />
   </head>
 
   <body id="page-top">
