Edit header tag codes

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Gabriel V. Agoncillo | Software Developer</title>
+    <title>Gab Agoncillo | Software Developer</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/avatar-wo-bg.png" />
   </head>
 
